[gd_scene load_steps=18 format=2]

[ext_resource path="res://World/TeslaCoilRod.png" type="Texture" id=1]
[ext_resource path="res://TeslaCoilSwitch.gd" type="Script" id=2]
[ext_resource path="res://World/TeslaCoilBase.png" type="Texture" id=3]
[ext_resource path="res://Effects/lightning_one_5_step.png" type="Texture" id=4]
[ext_resource path="res://Music and Sounds/electricity_glitch_11.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/06 Border 01.png" type="Texture" id=6]
[ext_resource path="res://fonts/PixelTandysoft-0rJG.ttf" type="DynamicFontData" id=7]

[sub_resource type="CapsuleShape2D" id=1]
height = 23.3333

[sub_resource type="CircleShape2D" id=2]
radius = 25.02

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 112, 112 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=9]
radius = 58.3571

[sub_resource type="DynamicFont" id=10]
size = 10
font_data = ExtResource( 7 )

[node name="TeslaCoilSwitch" type="StaticBody2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -3, -30 )
rotation = 2.35619
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1.66667, -8.33333 )
shape = SubResource( 1 )

[node name="SwitchArea2D" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="SwitchArea2D"]
position = Vector2( -3, -37 )
shape = SubResource( 2 )

[node name="Lightning1" type="AnimatedSprite" parent="."]
position = Vector2( 5, -68.3333 )
rotation = 0.261799
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 1
playing = true

[node name="Lightning2" type="AnimatedSprite" parent="."]
position = Vector2( 11.6667, -63.3333 )
rotation = 0.523599
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
playing = true

[node name="Lightning3" type="AnimatedSprite" parent="."]
position = Vector2( 16.6667, -56.6666 )
rotation = 0.785398
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="Lightning4" type="AnimatedSprite" parent="."]
position = Vector2( -20, -56.6667 )
rotation = -0.785398
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="Lightning5" type="AnimatedSprite" parent="."]
position = Vector2( -15, -63.3333 )
rotation = -0.523599
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 4
playing = true

[node name="Lightning6" type="AnimatedSprite" parent="."]
position = Vector2( -8.33333, -66.6667 )
rotation = -0.261799
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 8 )
frame = 3
playing = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -8.0
pitch_scale = 0.8

[node name="Timer" type="Timer" parent="."]
wait_time = 25.0
one_shot = true

[node name="AlertArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AlertArea2D"]
shape = SubResource( 9 )

[node name="PopupDialog" type="PopupDialog" parent="."]
visible = true

[node name="Sprite" type="Sprite" parent="PopupDialog"]
position = Vector2( 48.3333, -15 )
texture = ExtResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="PopupDialog/Sprite"]
self_modulate = Color( 0.101961, 1, 0, 1 )
margin_left = -20.0
margin_top = -25.0
margin_right = 57.0
margin_bottom = -3.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]gate pylon"
text = "gate pylon"

[node name="RichTextLabel2" type="RichTextLabel" parent="PopupDialog/Sprite"]
self_modulate = Color( 0.219608, 1, 0, 1 )
margin_left = -26.6667
margin_top = -11.6667
margin_right = 93.3333
margin_bottom = 55.3333
rect_scale = Vector2( 0.45, 0.45 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Caution: Ensure no organic matter is nearby gate when pylon is activated."
text = "Caution: Ensure no organic matter is nearby gate when pylon is activated."

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="area_entered" from="SwitchArea2D" to="." method="_on_SwitchArea2D_area_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="AlertArea2D" to="." method="_on_AlertArea2D_area_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
